fixing font causing layout shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,9 +2,8 @@
   font-family: "Satoshi-Variable";
   src: url("/fonts/Satoshi-Variable.woff2") format("woff2");
   font-weight: 300 900;
-  font-display: swap;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -16,7 +15,7 @@
   descent-override: 21.95%;
   line-gap-override: 9.14%;
   size-adjust: 109.35%;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -24,7 +23,7 @@
   src: url("/fonts/MartianMono-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -32,7 +31,7 @@
   src: url("/fonts/hack-regular-subset.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 html {
@@ -42,26 +41,14 @@ html {
 }
 
 body {
-  --at-apply: "font-sans p-5 m-auto max-w-80ch text-(left neutral-300) bg-neutral-900 break-words leading-6 antialiased flex flex-col min-h-screen";
+  --at-apply: "font-sans p-5 m-auto max-w-60vw text-(left neutral-300) bg-neutral-900 break-words leading-6 antialiased flex flex-col min-h-screen";
   text-rendering: optimizeLegibility;
   scroll-behavior: smooth;
   word-wrap: break-word;
   width: 100%;
-  font-family:
-    "Satoshi-Variable",
-    "Satoshi-Variable Fallback",
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
-  font-display: swap;
+  font-family: "Satoshi-Variable", "Helvetica Neue",
+    system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu,
+    Cantarell, "OpenSans", "Helvetica Neue", sans-serif;
 }
 main {
   --at-apply: "flex-grow flex flex-col";
